--- a/config.example.json
+++ b/config.example.json
@@ -4,8 +4,8 @@
   ],
   "auto_pick_heart_rate": false,
   "enable_telegram": true,
-  "telegram_bot_token": "8652298924:AAGb9SXQecp4VOZkxxPUVcI94viHCgBv8To",
-  "telegram_chat_id": "8392239667",
+  "telegram_bot_token": "0",
+  "telegram_chat_id": "0",
   "enable_email": false,
   "smtp_host": "",
   "smtp_port": 587,
